--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="/"> Webstudio </a>
       <nav>
         <ul>
-          <li><a href=""> Студия </a></li>
+          <li><a href="./index.html"> Студия </a></li>
           <li><a href="./portfolio.html"> Портфолио </a></li>
           <li><a href=""> Контакты </a></li>
         </ul>
