--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфолио</title>
   </head>
   <body>
@@ -85,7 +86,7 @@
     </main>
     <!--Футер-->
     <footer>
-      <a href="/"> Webstudio </a>
+      <a href="index.html"> Webstudio </a>
 
       <address>
         г. Киев, пр-т Леси Украинки, 26
