--- a/index.html
+++ b/index.html
@@ -4,68 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Навигация-->
-    <header>
-      <a href="/"> Webstudio </a>
+    <header class="page-header">
+      <a href="/" class="logo">
+        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+      </a>
       <nav>
-        <ul>
-          <li><a href="./index.html"> Студия </a></li>
-          <li><a href="./portfolio.html"> Портфолио </a></li>
-          <li><a href=""> Контакты </a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+      <ul class="site-contact list">
+        <li>
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="tel" href="tel:+380961111111"> +38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Шапка-->
     <main>
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+
+        <button type="button" class="button primary">Заказать услугу</button>
       </section>
 
       <!--Описание-->
-      <section>
+      <section class="section">
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
-            <p>
+            <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p class="title-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <h2>Пунктуальность</h2>
-            <p>
+            <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
+            <p class="title-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <h2>Планирование</h2>
-            <p>
+            <h3 class="title">ПЛАНИРОВАНИЕ</h3>
+            <p class="title-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <h2>Современные технологии</h2>
-            <p>
+            <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p class="title-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -74,29 +81,29 @@
       </section>
 
       <!--Чем занимаемся-->
-      <section>
+      <section class="section">
         <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+        <ul class="what-we-do list">
+          <li class="coding">
             <img
               src="images/img1.jpg"
-              alt="Пишем софт"
+              alt="Пишем код на ноутбуке"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="choose-design">
             <img
               src="images/img2.jpg"
-              alt="Проверяем софт"
+              alt="Выбираем дизайн смартфона"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="choose-colors">
             <img
               src="images/img3.jpg"
-              alt="Публикуем софт"
+              alt="Выбираем палитру цветов"
               width="370"
               height="294"
             />
@@ -105,56 +112,28 @@
       </section>
 
       <!--Команда-->
-      <section>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
-            <img
-              src="images/photo1.jpg"
-              alt="Игорь Демьяненко Product Designer"
-              width="270"
-              height="260"
-            />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <img src="./images/photo1.jpg" alt="ihor-demyanenko" width="270" />
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-work">Product Designer</p>
           </li>
-        </ul>
-
-        <ul>
           <li>
-            <img
-              src="images/photo2.jpg"
-              alt="Ольга Репина Frontend Developer"
-              width="270"
-              height="260"
-            />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <img src="./images/photo2.jpg" alt="olha-repina" width="270" />
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-work">Frontend Developer</p>
           </li>
-        </ul>
-
-        <ul>
           <li>
-            <img
-              src="images/photo3.jpg"
-              alt="Николай Тарасов Marketing"
-              width="270"
-              height="260"
-            />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <img src="./images/photo3.jpg" alt="nikolay-tarasov" width="270" />
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-work">Marketing</p>
           </li>
-        </ul>
-
-        <ul>
           <li>
-            <img
-              src="images/photo4.jpg"
-              alt="Михаил Ермаков UI Designer"
-              width="270"
-              height="260"
-            />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <img src="./images/photo4.jpg" alt="mihail-ermakov" width="270" />
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-work">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -162,15 +141,26 @@
 
     <!--Футер-->
 
-    <footer>
-      <a href="index.html"> Webstudio </a>
-
+    <footer class="footer">
+      <a href="/" class="logo"
+        ><span class="logo-web">Web</span
+        ><span class="logo-footer">Studio</span></a
+      >
       <address>
-        г. Киев, пр-т Леси Украинки, 26
-
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111"> +38 099 111 11 11 </a></li>
+        <ul class="list">
+          <li>
+            <a href="#" class="address">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="address-link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="address-link"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
