--- a/portfolio.html
+++ b/portfolio.html
@@ -4,96 +4,190 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="page">
     <!--Навигация-->
     <header>
-      <a href="/"> Webstudio </a>
+      <a href="/" class="logo">
+        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+      </a>
       <nav>
-        <ul>
-          <li><a href="./index.html"> Студия </a></li>
-          <li><a href="./portfolio.html"> Портфолио </a></li>
-          <li><a href=""> Контакты </a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+      <ul class="site-contact list">
+        <li>
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="tel" href="tel:+380961111111"> +38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--Выбор работ-->
 
-      <button>Все</button>
-      <button>Веб-Сайты</button>
-      <button>Приложения</button>
-      <button>Дизайн</button>
-      <button>Маркетинг</button>
-
       <section>
-        <!--Варианты-->
-        <ul>
+        <ul class="list">
+          <li><button type="button" class="button primary">Все</button></li>
           <li>
-            <img src="/images/notebook1.jpg" alt="Ноутбук" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <button type="button" class="button secondary">Веб-Сайты</button>
           </li>
+          <li>
+            <button type="button" class="button secondary">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Маркетинг</button>
+          </li>
+        </ul>
 
+        <ul class="list">
           <li>
-            <img src="/images/poster.jpg" alt="Постер баскетбол" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/notebook1.jpg"
+                alt="Ноутбук на котором открыт сайт"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Технокряк</h3>
+              <p class="portfolio-list">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="/images/logotype.jpg" alt="Логотип" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/poster.jpg"
+                alt="<Баскетболисты>"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-list">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="/images/headphones.jpg" alt="Наушники" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/logotype.jpg"
+                alt="Эмблема ресторана"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Ресторан Seafood</h3>
+              <p class="portfolio-list">Приложение</p></a
+            >
           </li>
           <li>
-            <img src="/images/boxes.jpg" alt="Коробки" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/headphones.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Проект Prime</h3>
+              <p class="portfolio-list">Маркетинг</p></a
+            >
           </li>
           <li>
-            <img src="/images/monitor.jpg" alt="Монитор" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/boxes.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Проект Boxes</h3>
+              <p class="portfolio-list">Приложение</p></a
+            >
           </li>
           <li>
-            <img src="/images/magazine.jpg" alt="Журнал" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/monitor.jpg"
+                alt="Монитор"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Inspiration has no Borders</h3>
+              <p class="portfolio-list">Веб-сайт</p></a
+            >
           </li>
           <li>
-            <img src="/images/label.jpg" alt="Ярлык" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/magazine.jpg"
+                alt="Разворот журнала"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Издание Limited Edition</h3>
+              <p class="portfolio-list">Дизайн</p></a
+            >
           </li>
           <li>
-            <img src="/images/magazine.jpg" alt="Набор текста на ноутбуке" />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/label.jpg"
+                alt="Бирка"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Проект LAB</h3>
+              <p class="portfolio-list">Маркетинг</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="portfolio-link"
+              ><img
+                src="./images/notebook2.jpg"
+                alt="Набор текста на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-name">Growing Business</h3>
+              <p class="portfolio-list">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a href="index.html"> Webstudio </a>
-
+    <footer class="footer">
+      <a href="/" class="logo"
+        ><span class="logo-web">Web</span
+        ><span class="logo-footer">Studio</span></a
+      >
       <address>
-        г. Киев, пр-т Леси Украинки, 26
-
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111"> +38 099 111 11 11 </a></li>
+        <ul class="list">
+          <li>
+            <a href="#" class="address">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="address-link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="address-link"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
