--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="site-contact list">
+      <ul class="auth-nav list">
         <li>
-          <a class="mail" href="mailto:info@devstudio.com"
+          <a class="link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li><a class="tel" href="tel:+380961111111"> +38 096 111 11 11</a></li>
+        <li><a class="link" href="tel:+380961111111"> +38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- Шапка-->
