--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <!--Описание-->
       <section class="section">
-        <ul>
+        <ul class="detail list">
           <li>
             <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p class="title-text">
