--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <!--Навигация-->
     <header class="page-header">
-      <a href="/" class="logo">
-        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-      </a>
+      <a href="/index.html" class="logo-web"
+        >Web<span class="logo-studio">Studio</span></a
+      >
       <nav>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
@@ -142,9 +142,8 @@
     <!--Футер-->
 
     <footer class="footer">
-      <a href="/" class="logo"
-        ><span class="logo-web">Web</span
-        ><span class="logo-footer">Studio</span></a
+      <a href="/index.html" class="logo-web" lang="en"
+        >Web<span class="logo-footer">Studio</span></a
       >
       <address>
         <ul class="list">
