--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
   <body class="page">
     <!--Навигация-->
     <header>
-      <a href="/" class="logo">
-        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-      </a>
+      <a href="/index.html" class="logo-web"
+        >Web<span class="logo-studio">Studio</span></a
+      >
       <nav>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -169,9 +169,8 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <a href="/" class="logo"
-        ><span class="logo-web">Web</span
-        ><span class="logo-footer">Studio</span></a
+      <a href="/index.html" class="logo-web" lang="en"
+        >Web<span class="logo-footer">Studio</span></a
       >
       <address>
         <ul class="list">
